--- a/src/app/componentes/main/main.component.html
+++ b/src/app/componentes/main/main.component.html
@@ -12,7 +12,7 @@
 
 <ng-template #semNotas>
     <div class="mensagem">
-        <p class="titulo semNota">Não há notas =</p>
+        <p class="titulo semNota">Não há notas</p>
     </div>
 </ng-template>
 
